--- a/css/typography.css
+++ b/css/typography.css
@@ -234,4 +234,5 @@ input {
 	text-indent:100%;
 	white-space:nowrap;
 	overflow:hidden;
+	position:absolute;
 }
